src/snapshots/mailypoppins__send__tests__markdown_to_html_basic_paragraph.snap
---
source: src/send.rs
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<style>
body { font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; }
a { color: #0066cc; }
p { margin: 0 0 1em 0; }
blockquote { margin: 0.5em 0; padding: 0 0 0 1em; border-left: 2px solid #ccc; white-space: pre-wrap; }
</style>
</head>
<body>
<div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">
<p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; margin: 0 0 1em 0;">Hello <strong>world</strong>!</p>
<p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; margin: 0 0 1em 0;">Second paragraph.</p>

</div>
</body>
</html>
