src/snapshots/mailypoppins__send__tests__markdown_to_html_tables_and_links.snap
---
source: src/send.rs
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<style>
body { font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; }
a { color: #0066cc; }
p { margin: 0 0 1em 0; }
blockquote { margin: 0.5em 0; padding: 0 0 0 1em; border-left: 2px solid #ccc; white-space: pre-wrap; }
</style>
</head>
<body>
<div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">
<table style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;"><thead style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;"><tr style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;"><th style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">A</th><th style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">B</th></tr></thead><tbody style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">
<tr style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;"><td style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">1</td><td style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000;">2</td></tr>
</tbody></table>
<p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; margin: 0 0 1em 0;"><a style="color: #0066cc;" href="https://example.com">Link</a></p>
<p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #000; margin: 0 0 1em 0;"><del>strikethrough</del></p>

</div>
</body>
</html>
